Two New Heritages For Padania

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -969,7 +969,14 @@
  # Tusima
  tusima_heritage:0 "Heritage of the Japanese Gateway"
  tusima_heritage_desc:0 "The inhabitants of Tusima, modern Tsushima, live within a wild place - an archipelago which loosely comes together in the form of a solitary island. This stretch of beaches and lofty heights acts as both a conduit and a barrier of trade, culture, faith, politics, and war between those on the Korean peninsula and others on the main Japanese islands. In its peaceful moments, the people of Tusima play with the Yoshino cherries growing along the hilltops or stalk the Tsushima Leopard Cat, hoping to make a pet out of it. The island was supposedly one of the original 8 created by the Shinto gods Izanagi and Izanami and was inhabited by Jomon Japanese and Korean settlers in the Neolithic Period or earlier. It was noted as one of the 30 union countries, Yamatai, which ruled the region during the 1st millenium BCE, trading with the Yayoi in Japan proper and the Jinhan in Korea."
-
+ 
+ # Spica
+ spica_heritage: "Heritage of the Northern Etruscans"
+ spica_heritage_desc: "Protected by the Padanian delta, Spica, the last independent Etruscan center of Northern Italy, is holding out against the Celts. Although it was founded by the Pelasgians according to Dyonisio of Halikarnassos, Spica was soon abandoned by them and instead became an Etruscan emporium, which flourished from around 210 years after the foundation of Rome. These times, when it functioned as a hinge between the Greek and Etruscan world, are long gone, as they have been now isolated from Etruria after the Celtic invasion of Central Italy."
+ 
+ # Ravna
+ ravenna_heritage: "Heritage of the Marshy Capital"
+ ravenna_heritage_desc: "Etruscans, Sabines, Thessalians, Venetians or Pelasgians - each ancient author seems to have had his own favorite theory for the foundation of Ravna or Ravenna how it is known to us now. Certainty is only brought via archaeology which has found out that an Umbrian presence lived undisturbedly for around three centuries before the Romans came in around 534 AVC. The long independence of the inhabitants of Ravna was due to the particular location of Ravenna which until the end of the Middle Ages allowed the city to be reached only by water; this characteristic allowed the population to maintain flourishing political and economic relations with the Etruscans and Gauls while they could remain independent from them."
 
  ##################################################################################################################################
  rome_rhaetian_wine:0 "Rhaetian Wine"
