--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -35,7 +35,7 @@
  missions_yue_state_task_9_DESC: "Just like a thunder we have to strike fast and catch the Chu unprepared. Their demise is certain.\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  missions_yue_state_task_10: "Art Of War"
- missions_yue_state_task_10_DESC: "Wu's most famous son, Sun Tzu, wrote his profound insights into strategy and and warfare in his classical work, the Art of War, some two centuries ago, yet it is more current than ever in this period of Warring States.\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
+ missions_yue_state_task_10_DESC: "Wu's most famous son, Sun Tzu, wrote his profound insights into strategy and warfare in his classical work, the Art of War, some two centuries ago, yet it is more current than ever in this period of Warring States.\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  missions_yue_state_task_11: "Revenge On Qi" #Qi led on Wuqiang and deflected the attack of Yue from Qi to Chu. Yue was then utterly defeated by Chu.
  missions_yue_state_task_11_DESC: "The scheming #E Qi#! deflected King [GetCharacter('(int32)590').GetName]'s attack by promising that the #E Chu#! are easy prey, but our days of glory came to an end because of our folly to believe them; tell the Qi that they must submit to the Yue or else they will be utterly destroyed.\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
