Xiongnu most of tree 1 complete

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -3,7 +3,7 @@
  xiongnu_missions_2: "Expansion of the Xiongnu"
  xiongnu_missions_2_DESCRIPTION: "Mission description"
  xiongnu_missions_2_CRITERIA_DESCRIPTION: "This mission will be completed when the Xiongnu have struck out in all directions to create a vast steppe empire."
- xiongnu_missions_2_BUTTON_TOOLTIP: ""
+ xiongnu_missions_2_BUTTON_TOOLTIP: "The world has only just begun to feel the might of Xiongnu horse and iron!"
 
 #Missions
 
@@ -11,7 +11,7 @@
  xiongnu_missions_2_task_1_DESC: "The bane of our existence for centuries - the Yuezhi - must pay for their treachery against the great Chanyu Modun. The time has come, and our hooves are ready, to finally put an end to our greatest rival in the region. The Yuezhi shall be exterminated."
 
  xiongnu_missions_2_task_2: "Luandi Dynasty"
- xiongnu_missions_2_task_2_DESC: "The greatness of Modun to forge a steppe empire from such a diverse set peoples across Asia attests to the vitalityof the Luandi bloodline. Forever will the descendants of Modun be respected and feared as the progeny of the greatest horselord to have ever lived."
+ xiongnu_missions_2_task_2_DESC: "The greatness of Modun to forge a steppe empire from such a diverse set peoples across Asia attests to the vitality of the Luandi bloodline. Forever will the descendants of Modun be respected and feared as the progeny of the greatest horselord to have ever lived."
 
  xiongnu_missions_2_task_3: "The Gryphons' Gold"
  xiongnu_missions_2_task_3_DESC: "The great mountains on our western border are said to be inhabited by gold-guarding gryphons - in reality they are but another tribal people who hoard the vast welath of the Altai Mountains for themselves. We will show them to be mere mortal men as they submit to the iron and hoof of the Chanyu."
@@ -114,8 +114,8 @@
  me_xiongnu_2_9.a: ""
 
  me_xiongnu_2_10_title: "$xiongnu_missions_2_task_10$"
- me_xiongnu_2_10_desc: ""
- me_xiongnu_2_10.a: ""
+ me_xiongnu_2_10_desc: "Our great leader gave a speech after the conquest our latest foes - 'I am not content with the vast grass sea, I am not content with just sheep, cattle and horse. We have seen with our own eyes the silks, the gold, the women, the wine, the entirety of the wealth of those weaker than us. Our pitiful and sparse trade and raids upon their land have produced but small hints at the luxuries that we ought possess. Their elders wear fine clothes, feast every night, fill halls of gold, drink sweet wines to their heart content; while our elders live in cold huts, often in squalor, one raid or one flock from starving. Why should the strong be content to live on the frozen edge of the world while the weak men of civilizations live in warm stone houses and want for nothing? We will ride through their great halls, and give our elders what their have had for generations! We will take their wine, silks, gold and women, and then they will understand what it is like to live a life of hardship!"
+ me_xiongnu_2_10.a: "The wealth of China will be ours!"
 
  me_xiongnu_2_11_title: "$xiongnu_missions_2_task_11$"
  me_xiongnu_2_11_desc: ""
