more xiongnu mission loc

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -59,7 +59,7 @@
  xiongnu_missions_2_task_17_DESC: "It is time to make Longcheng into a proper city - no longer just a place for tents and pastures, but a metropolis built in the heart of the steppe, blending nomadic themes with Chinese architectural brilliance. The Chanyu shall rule from a seat of radiant glory over our vast lands."
 
  xiongnu_missions_2_task_18: "March Further West"
- xiongnu_missions_2_task_18_DESC: "Conquest of the Balkash region has brought us into contact with even more steppe tribes. These horsemen describe vast riches of hitherto unknown empires in lands far to the south and west. Plunder from their recent raids prove the extravanct wealth of these nations, and the Chanyu greatly desires these prestige items. The only problem is that these tribes lay between our armies and the unknown empires, but that can be remedied..."
+ xiongnu_missions_2_task_18_DESC: "Conquest of the Balkash region has brought us into contact with even more steppe tribes. These horsemen describe vast riches of hitherto unknown empires in lands far to the south and west. Plunder from their recent raids prove the extravagant wealth of these nations, and the Chanyu greatly desires these prestige items. The only problem is that these tribes lay between our armies and the unknown empires, but that can be remedied..."
 
  xiongnu_missions_2_task_19: "Western Taklamakan"
  xiongnu_missions_2_task_19_DESC: "The vast riches of Tarim Basin oasis cities are now within our grasp - their desert fortresses will not be able to hold out forever against the might of the Chanyu's hordes of Asia. The plunder of the great cities of the Silk Road will fill the wallets of our tribesmen, and that of the Chanyu."
@@ -77,7 +77,7 @@
  #Events
  me_xiongnu_2_1_title: "$xiongnu_missions_2_task_1$"
  me_xiongnu_2_1_desc: ""
- me_xiongnu_2_1.a: ""
+ me_xiongnu_2_1.a: "Our greatest rivals are destroyed!"
 
  me_xiongnu_2_2_title: "$xiongnu_missions_2_task_2$"
  me_xiongnu_2_2_desc: ""
@@ -85,11 +85,11 @@
 
  me_xiongnu_2_3_title: "$xiongnu_missions_2_task_3$"
  me_xiongnu_2_3_desc: ""
- me_xiongnu_2_3.a: ""
+ me_xiongnu_2_3.a: "Let us claim the gold of the Gryphons!"
 
  me_xiongnu_2_4_title: "$xiongnu_missions_2_task_4$"
  me_xiongnu_2_4_desc: ""
- me_xiongnu_2_4.a: ""
+ me_xiongnu_2_4.a: "The Hu are no match for us."
 
  me_xiongnu_2_5_title: "$xiongnu_missions_2_task_5$"
  me_xiongnu_2_5_desc: ""
@@ -99,19 +99,19 @@
 
  me_xiongnu_2_6_title: "$xiongnu_missions_2_task_6$"
  me_xiongnu_2_6_desc: ""
- me_xiongnu_2_6.a: ""
+ me_xiongnu_2_6.a: "The clan leaders will fear and obey."
 
  me_xiongnu_2_7_title: "$xiongnu_missions_2_task_7$"
  me_xiongnu_2_7_desc: ""
- me_xiongnu_2_7.a: ""
+ me_xiongnu_2_7.a: "The vast Western Steppe now lay open."
 
  me_xiongnu_2_8_title: "$xiongnu_missions_2_task_8$"
  me_xiongnu_2_8_desc: ""
- me_xiongnu_2_8.a: ""
+ me_xiongnu_2_8.a: "A gift worthy of the Chanyu!"
 
  me_xiongnu_2_9_title: "$xiongnu_missions_2_task_9$"
  me_xiongnu_2_9_desc: ""
- me_xiongnu_2_9.a: ""
+ me_xiongnu_2_9.a: "We have no rivals in the Eastern Steppe."
 
  me_xiongnu_2_10_title: "$xiongnu_missions_2_task_10$"
  me_xiongnu_2_10_desc: "Our great leader gave a speech after the conquest our latest foes - 'I am not content with the vast grass sea, I am not content with just sheep, cattle and horse. We have seen with our own eyes the silks, the gold, the women, the wine, the entirety of the wealth of those weaker than us. Our pitiful and sparse trade and raids upon their land have produced but small hints at the luxuries that we ought possess. Their elders wear fine clothes, feast every night, fill halls of gold, drink sweet wines to their heart content; while our elders live in cold huts, often in squalor, one raid or one flock from starving. Why should the strong be content to live on the frozen edge of the world while the weak men of civilizations live in warm stone houses and want for nothing? We will ride through their great halls, and give our elders what their have had for generations! We will take their wine, silks, gold and women, and then they will understand what it is like to live a life of hardship!"
@@ -119,53 +119,53 @@
 
  me_xiongnu_2_11_title: "$xiongnu_missions_2_task_11$"
  me_xiongnu_2_11_desc: ""
- me_xiongnu_2_11.a: ""
+ me_xiongnu_2_11.a: "Awe at the majesty of our Great Chanyu!"
 
  me_xiongnu_2_12_title: "$xiongnu_missions_2_task_12$"
  me_xiongnu_2_12_desc: ""
- me_xiongnu_2_12.a: ""
+ me_xiongnu_2_12.a: "Longcheng will forever be our spiritual home."
 
  me_xiongnu_2_13_title: "$xiongnu_missions_2_task_13$"
  me_xiongnu_2_13_desc: ""
- me_xiongnu_2_13.a: ""
+ me_xiongnu_2_13.a: "The Tocharians would be wise to submit."
 
  me_xiongnu_2_14_title: "$xiongnu_missions_2_task_14$"
  me_xiongnu_2_14_desc: ""
- me_xiongnu_2_14.a: ""
+ me_xiongnu_2_14.a: "This is but out first step into China..."
 
  me_xiongnu_2_15_title: "$xiongnu_missions_2_task_15$"
  me_xiongnu_2_15_desc: ""
- me_xiongnu_2_15.a: ""
+ me_xiongnu_2_15.a: "Let us make better use of these new lands..."
 
  me_xiongnu_2_16_title: "$xiongnu_missions_2_task_16$"
  me_xiongnu_2_16_desc: ""
- me_xiongnu_2_16.a: ""
+ me_xiongnu_2_16.a: "The Chanyu loves nothing more than beautiful women..."
 
  me_xiongnu_2_17_title: "$xiongnu_missions_2_task_17$"
  me_xiongnu_2_17_desc: ""
- me_xiongnu_2_17.a: ""
+ me_xiongnu_2_17.a: "Longcheng is a city fit for our royal court!"
 
  me_xiongnu_2_18_title: "$xiongnu_missions_2_task_18$"
  me_xiongnu_2_18_desc: ""
- me_xiongnu_2_18.a: ""
+ me_xiongnu_2_18.a: "Our Steppe Empire extends ever-westward."
 
  me_xiongnu_2_19_title: "$xiongnu_missions_2_task_19$"
  me_xiongnu_2_19_desc: ""
- me_xiongnu_2_19.a: ""
+ me_xiongnu_2_19.a: "The Tarim city-states have new masters."
 
  me_xiongnu_2_20_title: "$xiongnu_missions_2_task_20$"
  me_xiongnu_2_20_desc: ""
- me_xiongnu_2_20.a: ""
+ me_xiongnu_2_20.a: "We must look further south..."
 
  me_xiongnu_2_21_title: "$xiongnu_missions_2_task_21$"
  me_xiongnu_2_21_desc: ""
- me_xiongnu_2_21.a: ""
+ me_xiongnu_2_21.a: "Our grasp on the outer realms remains firm."
  
  me_xiongnu_2_22_title: "$xiongnu_missions_2_task_22$"
  me_xiongnu_2_22_desc: ""
- me_xiongnu_2_22.a: ""
+ me_xiongnu_2_22.a: "All of Korean has now submitted to the Chanyu."
  
- me_xiongnu_2_90_title: ""
+ me_xiongnu_2_90_title: "Expansion of the Xiongnu"
  me_xiongnu_2_90_desc: ""
  me_xiongnu_2_90.a: ""
  
