--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -3,7 +3,7 @@
  xiongnu_missions_3:0 "Xiongnu of China"
  xiongnu_missions_3_DESCRIPTION:0 "Mission description"
  xiongnu_missions_3_CRITERIA_DESCRIPTION:0 "This mission will be completed when China is fully under the control of the Xiongnu Empire."
- xiongnu_missions_3_BUTTON_TOOLTIP:0 ""
+ xiongnu_missions_3_BUTTON_TOOLTIP:0 "We will be the masters of all China!"
 
  #Missions
 
@@ -23,7 +23,7 @@
  xiongnu_missions_3_task_5_DESC:0 "It is time to finally end the existence of the depleted Chu state - they are fortunate to now live under the yolk of our great Chanyu, who will better manage their lands."
 
  xiongnu_missions_3_task_6:0 "Mouth of the Yellow River"
- xiongnu_missions_3_task_6_DESC:0 ""
+ xiongnu_missions_3_task_6_DESC:0 "The mouth of the Yelllow River is both replete with wealthy cities and is of crucial military importance to deny our enemies of naval ports with which they can strike us on the coast indiscriminately. In particular, the region of Linzi is greatly desired by the Great Chanyu, as it rumoured to possess wealth beyond measure as well as a dense population of potential slaves. Let our horses ride forth to dominate the mouth of that great river!"
 
  xiongnu_missions_3_task_7:0 "Check Qi"
  xiongnu_missions_3_task_7_DESC:0 "The Qi have been one of the most powerful states of the Middle Kingdom for centuries now. Their tacticians have proven capable, their artisans more brilliant than all the world, and their capital of Linzi is unparalled in splendor, knowledge and wealth. All the things our Great Chanyu desires for himself..."
@@ -47,22 +47,22 @@
  xiongnu_missions_3_task_13_DESC:0 "The Sichuan Basin is replete with exotic animals, tea and other goods the Chanyu greatly covets. The Basin must belong to the Great Chanyu, if not peacefully, then by force."
 
  xiongnu_missions_3_task_14:0 "Three Gorges"
- xiongnu_missions_3_task_14_DESC:0 ""
+ xiongnu_missions_3_task_14_DESC:0 "The mountainous upper reaches of the Yangtze are a difficult country. Ba, Shu, Rong and various other tribal entities have long given the Chinese trouble from these reaches, and even after their conquest by the likes of Qin and Chu, continued to be a bastion of rebellion. However, the areas are strategically significant - the rivers are a highway from which groups can conduct trade and raids throughout the entirety of the Yangtze, and are crucial to assert total dominance over the Sichuan Basin. Let us crush any remaining opposition in these areas and secure our position in the Upper Yellow and Yangtze Rivers, permanently."
 
  xiongnu_missions_3_task_15:0 "Southern Hills"
- xiongnu_missions_3_task_15_DESC:0 ""
+ xiongnu_missions_3_task_15_DESC:0 "The deep reaches of the southern forests and hills have given us as much trouble as they gave the Chu before us - various tribal groups continually harass our patrols, disease runs rampant, and the terrain is difficult for our horsemen. However the lands present great opporunity... great tusked beasts roam the jungles, other exotic animals can be found in these biomes, and silk, rice and metals can be found in great quantities. The Chanyu greatly desires control of these southern lands, so we must clear any tribal opposition and take full control."
 
  xiongnu_missions_3_task_16:0 "Ferghana Valley"
- xiongnu_missions_3_task_16_DESC:0 ""
+ xiongnu_missions_3_task_16_DESC:0 "The Ferghana Valley, inhabited by a myriad of Greek, Sogdian, Saka and other peoples, are rumoured to possess horses of the finest quality. And indeed this appears to be case according to our scouts and tradesmen; the 'Heavenly Horses' are among the finest steeds known in the world. It is inexcusable for the greatest of horsemen, the Xiognnu, to not have this breed of horse in our stables. We must strike forth and claim these lands in the name of the Chanyu."
 
  xiongnu_missions_3_task_17:0 "The Heaven's Horses"
- xiongnu_missions_3_task_17_DESC:0 ""
+ xiongnu_missions_3_task_17_DESC:0 "The Heavenly Horses of the Ferghana Basin have been a primary target of our western campaigns, as maintaining the best quality horses is of the utmost strategic value for the Empire. Let us expand the breeding and export of these animals for the sake of the Great Chanyu."
 
  xiongnu_missions_3_task_18:0 "Bonfire of Zhou"
- xiongnu_missions_3_task_18_DESC:0 ""
+ xiongnu_missions_3_task_18_DESC:0 "The great seat of the Middle Kingdom at Chengzhou will be the greatest prize of the Xiongnu. For centuries the legitimacy of the Zhou kings lay at the palace of this great city, accumulating wealth beyond measure and housing the holy objects of their people. By conquering and sacking this city, our Great Chanyu will eliminate the political system of the Chinese, demoralize the remaining Warring States, claim the vast treaures of the Zhou for our tribesmen and demonstrate our dominance over all of China."
 
  xiongnu_missions_3_task_19:0 "Enslave Chinese"
- xiongnu_missions_3_task_19_DESC:0 ""
+ xiongnu_missions_3_task_19_DESC:0 "The newly conquered Chinese population must be put in their place. The days of their cultural and political dominance are now over, and their peoples will now serve as nothing man than slaves to the Great Chanyu. Let us enshrine their 'rights' in our laws, and create a permanent slave class out of the once mighty Middle Kingdom."
 
  xiongnu_missions_3_task_20:0 "Looking for Freedom"
  xiongnu_missions_3_task_20_DESC:0 ""
@@ -74,16 +74,16 @@
  xiongnu_missions_3_task_22_DESC:0 "The Xiongnu ethnic peoples have become a small minority not just among our steppe tribal folk, but now especially among the numerous hordes of the Chinese we have subjugated. If we have any hope of maintaining control of China, we must integrate their peoples, accept Chinese ways and adopt more of their cultural practices."
 
  xiongnu_missions_3_task_23:0 "Xiongnu Dynasty"
- xiongnu_missions_3_task_23_DESC:0 ""
+ xiongnu_missions_3_task_23_DESC:0 "Our conquest over a people so vastly more numerous than our own, with a sophisticated culture millenia old, has led to a slow progress of Sinicization of our peoples. And indeed, the people of the Middle Kingdom are slowly becoming used to have foreign overlords, but hesitation still remains among their people, especially the educated elites. We Great Chanyu should fully embrace the title of Son of Heaven to fully legitimize our rule of China, and fullly adopt their well-established beauracratic systems to better rule over our vast, multi-ethnic empire."
 
  xiongnu_missions_3_task_24:0 "Side Corridor"
- xiongnu_missions_3_task_24_DESC:0 ""
+ xiongnu_missions_3_task_24_DESC:0 "While the #E Hexi corridor#! in the north is the primary route of travel from #E China#! to the #E Tarim Basin#!, there is another, more difficult passage to the south running from the southern edge of #E Tocharian#! lands eastward through northern #E Tibet #!. This corridor is inhabited by #E Rong#! tribal peoples known as the #E Nuomuhong#!, and presents a strategic liability for the [ROOT.GetCountry.GetName] should our enemies come to use it for military or economic gain. Let us secure this passage and ensure we control all routes leading out of #E China#!."
 
  xiongnu_missions_3_task_25:0 "Wei's Demise"
- xiongnu_missions_3_task_25_DESC:0 "The final of the three Jins, Wei, sits at the heart of the Yellow River. "
+ xiongnu_missions_3_task_25_DESC:0 "The final of the three Jins, Wei, sits at the heart of the Yellow River. We must strike forth to attain the great plunder of Daliang and rip the heart out of the Middle Kingdom."
 
  xiongnu_missions_3_task_26:0 "Mouths of Great Rivers"
- xiongnu_missions_3_task_26_DESC:0 ""
+ xiongnu_missions_3_task_26_DESC:0 "The mouths of the other two great rivers of China - the Huai and Yangtze - must be put under the sword if we ever hope to stop the flow of the aid coming to Chinese rebels from this coastline and up the rivers."
 
  xiongnu_missions_3_task_27:0 "Work the Silk Farms"
  xiongnu_missions_3_task_27_DESC:0 "The secret of silk manufacture is now in our hands as the masters of all China. Let us exploit this knowledge and ramp up production of silk to enrich the imperial coffers."
