more xiongnu loc (much of tree 2)

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -76,19 +76,19 @@
 
  #Events
  me_xiongnu_2_1_title: "$xiongnu_missions_2_task_1$"
- me_xiongnu_2_1_desc: ""
+ me_xiongnu_2_1_desc: "As the Chanyu lay his last arrow into the back of a fleeing Yuezhi horseman, he restrained his excitement. His fellow tribesmen had won the day and were already celebrating, chanting warcries as they finished off their fleeing and injured enemies. There were to be no prisoners. The Chanyu stood in awe at the carnage of the battlefield and pondered what victory over the Yuezhi would mean for the Xiongnu, and what it meant for him personally. Once a captive of this great tribal society, he escaped and now led an army to lay them to utter waste. The Yuezhi fled westward beyond knowledge of the Xiongnu. Visions of future conquest in the lands of the East came upon the Chanyu, and he turned away from the direction of his cheering comrades, away from the fleeing Yuezhi in the west, and began to gallop East. "
  me_xiongnu_2_1.a: "Our greatest rivals are destroyed!"
 
  me_xiongnu_2_2_title: "$xiongnu_missions_2_task_2$"
- me_xiongnu_2_2_desc: ""
- me_xiongnu_2_2.a: ""
+ me_xiongnu_2_2_desc: "Even 500 generations from now, tribesmen will harken back to this time, to this great Chanyu. They will claim their legitmacy to rule the steppe based on what Chanyu Modun has done in his life, and claim to be a descendant of this first God of the Steppe. Let the blood of Luandi haunt and terrorize enemies of our descendants throughout the millenia."
+ me_xiongnu_2_2.a: "The right to rule is in our blood."
 
  me_xiongnu_2_3_title: "$xiongnu_missions_2_task_3$"
- me_xiongnu_2_3_desc: ""
- me_xiongnu_2_3.a: "Let us claim the gold of the Gryphons!"
+ me_xiongnu_2_3_desc: "The Chanyu rode into the great Altai Mountains, after speaking to the captured shamans of the Gryphians. He was told a story of Gryffons guarding gold high upon a frozen mountaintop, with offerings and sacrifices performed to appease them just outside the cave. The Chanyu, with his bodyguards, found a horde of gems, bronze swords, bucklers, along with frozen sacrificial victims. This was the place. The Chanyu entered the cave without hesitation, torch in hand. After walking several paces, the Chanyu stopped and gasped. Huge skulls of Gryphons were frozen into the walls of rock and ice in front of him. The torches' light shone brightly on the wall, revealing veins of gold streaking throughout the cave. The Chanyu mumbled something about Tengri and the Great Wolf, and left the cave, forbidding anyone to ever enter again, and commanding offerings and sacrifices at the entrance annually."
+ me_xiongnu_2_3.a: "Let us inherit the legacy of the Gryffons."
 
  me_xiongnu_2_4_title: "$xiongnu_missions_2_task_4$"
- me_xiongnu_2_4_desc: ""
+ me_xiongnu_2_4_desc: "The first pitiful tribes of the Hu presented no match for the Chanyu and his host. The lands were swiftly integrated into the new tribal order, with flocks of Hu joining our ranks by the thousands. A great ceremony of intermarriage was conducted whereby the women of the Hu were given to the noble clansmen throughout the realm, with the finest reserved for the Chanyu himself. The Hu men would continue to live on their land, produce herds with which to feed the Xiongnu armies, and provide manpower when needed."
  me_xiongnu_2_4.a: "The Hu are no match for us."
 
  me_xiongnu_2_5_title: "$xiongnu_missions_2_task_5$"
@@ -98,19 +98,19 @@
  me_xiongnu_2_5.c: ""
 
  me_xiongnu_2_6_title: "$xiongnu_missions_2_task_6$"
- me_xiongnu_2_6_desc: ""
- me_xiongnu_2_6.a: "The clan leaders will fear and obey."
+ me_xiongnu_2_6_desc: "Laoshang, an up and coming star among the military and political leadership of our vast empire, dare to challenge our rule! Word has reached our ears that he has the backing of at least some contigent of the army and council. The Chanyu rode forth without delay, eager to silence any critics, and challenge this ambitious upstart to single combat. Laoshang could hear the thundering hooves in the distance and rode forth to meet his lord. As they met, the Chanyu, with his lavish bronze and iron sword, swung deep toward his foe, cleaving his head completely off. The Chanyu's horse was stabbed and fell to the ground, knocking the Great Chanyu to the dirt. When he arose, the entire camp hailed and chanted the name of Modun, putting all pretense of challenge to his rule to bed."
+ me_xiongnu_2_6.a: "The other clan leaders will fear and obey."
 
  me_xiongnu_2_7_title: "$xiongnu_missions_2_task_7$"
- me_xiongnu_2_7_desc: ""
+ me_xiongnu_2_7_desc: "The tribes along Lake Balhash proved no match for the might of the Xiongnu. Their vast grasslands along the lake now are within the domain of our Chanyu, and yet more clans of the steppe swear fealty to him. These tribesmen interestingly speak of great riches far to the south and west, and even claim that some portions of our old nemesis, the Yuezhi, have fled south of here to seek refuge in these fabled lands. Perhaps it is time for us strike out further..."
  me_xiongnu_2_7.a: "The vast Western Steppe now lay open."
 
  me_xiongnu_2_8_title: "$xiongnu_missions_2_task_8$"
- me_xiongnu_2_8_desc: ""
+ me_xiongnu_2_8_desc: "Upon riding back to the royal court at Longcheng after the most recent raids, the Chanyu was struck by a marvelous golden statue, dedicated to his previous horse which had fallen in combat, near the entrance of his great tent, built by the finest artisans brought in from across our vast realm. The Great Chanyu called for a feast and invited all the major constituent tribal elites of the Xiongnu Confederation to his halls, generously gifting portions of his flock to the tribal elite and dedicating offerings at religious temples. The purpose of this was twofold - to show his secure the loyalty the elites with gifts and to inspire awe and majesty in his rule by showcasing the magnificant horse. "
  me_xiongnu_2_8.a: "A gift worthy of the Chanyu!"
 
  me_xiongnu_2_9_title: "$xiongnu_missions_2_task_9$"
- me_xiongnu_2_9_desc: ""
+ me_xiongnu_2_9_desc: "The Donghu were but the last remaining major steppe tribal confederation east of the Altai that could possibly challenge our rule. Upon shattering their vast armies in the open field, the confederation dissolved and the consituent tribes one by one declared their allegiance to the Great Chanyu and allowed their lands to be annexed by the Xiongnu. Our new Hu brothers speak of a vast and rich realm directly to the south, providing many samples of luxurious and mysterious goods to our court. The Hu even provided slaves and women from this great kingdom to the Chanyu, whispering of the great plunder the lands of the south hold. From this moment, the Great Chanyu would learn all he could about the tactics culture of these city-builders, and become obsessed with claiming dominion over the Middle Kingdom."
  me_xiongnu_2_9.a: "We have no rivals in the Eastern Steppe."
 
  me_xiongnu_2_10_title: "$xiongnu_missions_2_task_10$"
@@ -118,19 +118,19 @@
  me_xiongnu_2_10.a: "The wealth of China will be ours!"
 
  me_xiongnu_2_11_title: "$xiongnu_missions_2_task_11$"
- me_xiongnu_2_11_desc: ""
+ me_xiongnu_2_11_desc: "Yet another golden gift has been contructed by some of the new Chinese artisan-slaves at Longcheng; a fabulous golden crown to be worn atop the Chanyu's head, signifying his royal status among the Chinese and captivating the minds of his fellow tribesmen. Subjects from across the great steppe to the cities of China will kneel before the golden crown of Modun."
  me_xiongnu_2_11.a: "Awe at the majesty of our Great Chanyu!"
 
  me_xiongnu_2_12_title: "$xiongnu_missions_2_task_12$"
- me_xiongnu_2_12_desc: ""
+ me_xiongnu_2_12_desc: "The ritual embellishment of the heart and soul of the empire - Longcheng - has led to a new religious fervor overtaking residents of the capital. The tribesmen and craftsmen awe at the contruction of temples, watch daily rites performed with a mystical air about them, and believe they are part of something greater than themselves. The shaman class, meanwhile, could not be happier with their new accomadations and status, entrenching their loyalty to the state. All goes according to plan..."
  me_xiongnu_2_12.a: "Longcheng will forever be our spiritual home."
 
  me_xiongnu_2_13_title: "$xiongnu_missions_2_task_13$"
- me_xiongnu_2_13_desc: ""
+ me_xiongnu_2_13_desc: "The dry and hot desert climate of the Taklamakan is not well suited for northern steppe horsemen - we had lost many beloved clansmen to attrition in these sandy desert, many horses have died of thirst, and some among our host had wondered why we had ventured so far for such little gain. Then, on the horizon, a great walled city in the desert, surrounded by trees and water, could be seen. Visions of plunder and glory filled the fantasies of the tribesmen, uplifting their morale. The siege was harsh on the warparty in this first city, however some Chinese engineers were able to teach our men tactics in capturing walled towns. Finally, after the grueling siege, our victorious tribesmen were able to indulge the fantasies that filled their eyes when they first gazed upon the oasis city."
  me_xiongnu_2_13.a: "The Tocharians would be wise to submit."
 
  me_xiongnu_2_14_title: "$xiongnu_missions_2_task_14$"
- me_xiongnu_2_14_desc: ""
+ me_xiongnu_2_14_desc: "The commanders of Yan attempted to flee from battle just outside the city gates of Ji, but alas, our horsemen were faster, and cut them down before the gate could even be opened. The entire countryside was burnt, and the city laid to siege. Eventually, the city was betrayed by Hu slavemen within the city, with the promise that non-Chinese residents of the city would be spared. But that was the only thing spared. The city was sacked, with thousands dying and the coffers of the kingdom claimed by the Chanyu, with portions doled out to his warriors. The wealth attained from this city was beyond anything anyone Xiongnu tribesmen had ever seen, yet even richer and larger cities lay further within the Middle Kingdom. The Chanyu was not yet satiated."
  me_xiongnu_2_14.a: "This is but out first step into China..."
 
  me_xiongnu_2_15_title: "$xiongnu_missions_2_task_15$"
