--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -179,7 +179,7 @@
  me_xiongnu_01_20.a: "Modun will ride forth to plunder and subjugate the great civilizations of the world!"
  
  me_xiongnu_01_21_title: "Rise of the Chanyu"
- me_xiongnu_01_21_desc: "The humble founding of the [ROOT.GetCountry.GetName] clans is shrouded in obscurity. It is told that some of our clans originally came from the west, home of some of the great #E kurgans#! of the #E Altai Mountains#!. Some of our clans speak of living here for a millenium, absorbing incoming clans from the west and adopting their ways of the horse. Whatever the case, the [ROOT.GetCountry.GetName] are a tribal confederation on the rise in the region, with one family, the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], standing out as particularly skilled warriors and deft tribal politicans. How far can these upstarts ride?"
+ me_xiongnu_01_21_desc: "The humble founding of the [ROOT.GetCountry.GetName] clans is shrouded in obscurity. It is told that some of our clans originally came from the west, home of some of the great #E kurgans#! of the #E Altai Mountains#!. Some of our clans speak of living here for a millenium, absorbing incoming clans from the west and adopting their ways of the horse. Whatever the case, the [ROOT.GetCountry.GetName] are a tribal confederation on the rise in the region, with one family, the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], standing out as particularly skilled warriors and deft tribal politicians. How far can these upstarts ride?"
  me_xiongnu_01_21.a: "Let us begin this."
 
 
